<resources>
    <string name="app_name">Plates</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_progress">Progress</string>
    <string name="title_meal_history">Meal History</string>
    <string name="title_favorites">Favorites</string>
    <string name="username">User</string>
    <string name="title_activity_settings">Settings</string>
    <string name="input_meal">Enter a meal</string>
    <string name="input_weight">Input a weight</string>
    <string name="feedback">Send Feedback</string>
    <string name="edit">Edit</string>

    <string name="greeting">Hi User, welcome to Plates!</string>
    <string name="daily_goals">Daily Goals</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
