<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:text="@string/greeting"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/greeting_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnInputMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="@drawable/button_format"
        android:paddingLeft="@dimen/button_text_margin"
        android:paddingRight="@dimen/button_text_margin"
        android:text="@string/enter_meal"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnInputWeight"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:background="@drawable/button_format"
        android:paddingLeft="@dimen/button_text_margin"
        android:paddingRight="@dimen/button_text_margin"
        android:text="@string/input_weight"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/feedback_button_height"
        android:background="@drawable/feedback_button_format"
        android:paddingLeft="@dimen/feedback_button_text_margin"
        android:paddingRight="@dimen/feedback_button_text_margin"
        android:text="@string/feedback"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/feedback_button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnEditGoals"
        android:layout_width="63dp"
        android:layout_height="35dp"
        android:text="@string/edit"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/daily_goals"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/greeting_text_size"
        app:layout_constraintStart_toStartOf="@+id/text_greeting"
        app:layout_constraintTop_toBottomOf="@+id/text_greeting" />

</androidx.constraintlayout.widget.ConstraintLayout>